--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
    "dependencies": {
+      "csvtojson": "^2.0.10",
       "dotenv": "^16.3.1",
       "mysql2": "^3.6.0",
       "telegraf": "^4.12.2"
@@ -7,7 +8,7 @@
    "engines": {
       "node": "18.16.0"
    },
-"scripts": {
+   "scripts": {
       "start": "node main.js"
    }
 }
