--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
    "dependencies": {
+      "async": "^3.2.4",
+      "csv-parser": "^3.0.0",
       "csvtojson": "^2.0.10",
       "dotenv": "^16.3.1",
       "mysql2": "^3.6.0",
+      "node-telegram-bot-api": "^0.61.0",
       "telegraf": "^4.12.2"
    },
    "engines": {
